# QF635_Market_Microstructure

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pg_hba.conf  pyproject.toml  requirements.txt  requirements_backtest.txt  sample-env  subscriptions.yaml
api/: binance_gateway.py  order_book.py
app/: Dockerfile  alembic.ini  data-gateway.py  main.py  requirements.txt  subscriptions.yaml
app/analytics/: TradeAnalysis.py
app/api/: base_api.py  base_gateway.py  binance_api.py  binance_gateway.py
app/api/mock/: mock_binance_api.py  mock_binance_gateway.py
app/bot/datafeeds/: spot.py
app/common/: constants.py  interface_api.py  interface_book.py  interface_message.py  interface_order.py  interface_portfolio.py  interface_risk.py  order_event_update.py  payloads.py  schema.py
app/datafeeds/: __init__.py  spot.py
app/execution/: circuit_breaker.py
app/migration/: env.py
app/order_management/: order_manager.py
app/portfolio/: portfolio_manager.py
app/pricing/: PricingEngine.py
app/queue_manager/: locking_queue.py  signal_queue.py
app/risk/: risk_manager.py
app/routes/: __init__.py
app/services/: __init__.py  circuit_breaker.py  redis_pool.py  redis_pub.py  redis_sub.py
app/strategy/: base_strategy.py  dual_macd.py  dual_macd_bt.py  macd_strategy.py  macd_strategy_bt.py  random_strategy.py
app/utils/: config.py  data_class_utils.py  func.py  logger.py
bot/: __init__.py  main.py
bot/analytics/: TradeAnalysis.py  TradeAnalytics.py
bot/api/: binance_api.py  binance_gateway.py
bot/client/: binance_api.py
bot/common/: interface_book.py  interface_order.py
bot/config/: settings.py
bot/portfolio/: PortfolioManager.py
bot/pricing/: PricingEngine.py
bot/risk/: RiskManager.py  risk_manager.py
bot/routes/: __init__.py
bot/services/: redis_pub.py  redis_service.py  redis_sub.py
bot/strategy/: base_strategy.py  macd_strategy.py  vwap_strategy.py
bot/utils/: config.py  func.py  logger.py
client/: binance.py
db/: alembic.ini  migrate.sh
db/migration/: env.py
interfaces/: logger.py
models/: __init__.py  assets.py  portfolio.py  trades.py
new_test/: pyvenv.cfg
new_test/Scripts/: activate  activate.bat
notebooks/: dualmacd_backtest_plot.html  macd_backtest_plot.html  orderbook_data.ipynb  strategy_backtest.ipynb  strategy_bt.ipynb  utils.py
tests/: test_macd_strategy.py  test_portfolio_manager.py  test_risk_manager.py  test_script.py  test_ta.py
tests/sample_data/: Trade_history-2024-03-09.json  Trade_history-2024-03-16.json  Trade_history-2024-03-24.json  Trade_history-2024-03-30.json  port-state-2024-03-09.json  port-state-2024-03-16.json  port-state-2024-03-24.json  port-state-2024-03-30.json
(+43 files in other folders)
